2007-03-27  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/gf2mat.cpp, itpp/base/gf2mat.h: Added set_size()
	method to the GF2mat class, which is compatible with Mat's
	set_size() function.

	* configure.ac: Version bump

==============================================================================
	
2007-03-22  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 3.99.1 released (SVN tag: release-3-99-1)

	* NEWS: Updated to reflect recent changes

	* doc/local/verification.doc: Added a new verification report for
	MSVC++ .NET and IT++ with ACML

2007-03-21  Adam Piatyszek  <ediap@users.sourceforge.net>

	* win32/itpp_acml.sln, win32/itpp_acml.vcproj, win32/itpp_mkl.sln,
	win32/itpp_mkl.vcproj, doc/local/installation.doc,
	doc/local/linking.doc, itpp/config_msvc.h, win32/itpp.sln,
	win32/itpp.vcproj, win32/Makefile.am: Added a new MSVC++ project
	file for linking IT++ with ACML (PGI build for Windows).
	Installation manual and "Linking with IT++" document updated to
	reflect these changes.

2007-03-20  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/random.cpp, itpp/base/random.h: Added
	rand53_01_lclosed() function for 53-bit resolution [0,1) random
	numbers generator. Global static initialization flag moved into
	Random_Generator class.

2007-03-09  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/ldpc.cpp, itpp/comm/ldpc.h: "std::string" replaced
	with "const std::string&" in function arguments to prevent passing
	by value. Cosmetic changes related to line wrapping.

2007-03-08  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/ldpc.cpp, itpp/comm/ldpc.h: "init_state" variable
	renamed to "init_flag". Cosmetic changes in the integrity_check()
	function.

2007-03-07  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/tutorial/src/ldpc_bersim_awgn.cpp,
	doc/tutorial/src/ldpc_gen_codes.cpp, itpp/comm/ldpc.cpp,
	itpp/comm/ldpc.h, tests/ldpc_test.cpp: LDPC_Parity_Matrix class